go-web-app/devops-go-web-app/k8s/manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-deployment
  labels:
    app: go-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: password-app
        image: santhosmails/devops-go-web-app:v2
        ports:
        - containerPort: 8080
