go-web-app/devops-go-web-app/k8s/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-service
spec:
  type: ClusterIP
  selector:
    app: go-web-app
  ports:
    - port: 80
      targetPort: 8080
