go-web-app/devops-go-web-app/k8s/manifests/ingress.yml
# kubectl create secret tls uptycsnet --cert=tls.crt --key=tls.key
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - password.uptycs.net
    secretName: uptycsnet  # Replace with the name of your TLS Secret
  rules:
  - host: "password.uptycs.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-web-app-service
            port:
              number: 80
